Update more parcels
Swap CAD to using new parcels to hopefully fix intermittent "no spot to plant the X4" issues
Fix a TLP parcel whose hack cell doors weren't hackable

--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -51,7 +51,7 @@
 ; Modded parcels for terror missions
 
 ; Replacement for "md_ShootingRange_01" with fire removed from a spawn point tile.
-arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType_Medium, arrZoneTypes[0]="Shanty", arrPlotTypes[0]=(strPlotType="Shanty"), bHasEntranceN1=true, bHasEntranceS2=true, bHasEntranceW1=true, ObjectiveTags[0]="Terror", bAllowNonObjectiveOverride=true)
++arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType_Medium, arrZoneTypes[0]="Shanty", arrPlotTypes[0]=(strPlotType="Shanty"), bHasEntranceN1=true, bHasEntranceS2=true, bHasEntranceW1=true, ObjectiveTags[0]="Terror", bAllowNonObjectiveOverride=true)
 
 ; Modded parcels for jailbreak missions
 
@@ -248,4 +248,22 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 
 ; Reshi parcel
 
-+arrAllParcelDefinitions=(MapName="ReshiParcel_CityParking_LAR",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", eFacing=EParcelFacingType_N bAllowNonObjectiveOverride=true)
++arrAllParcelDefinitions=(MapName="ReshiParcel_CityParking_LAR",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true)
+
+; fixed TLP parcel:
+
++arrAllParcelDefinitions=(MapName="Lg_AdventCathedral_LW", eSize=eParcelSizeType_Large, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_E, \\
+	ObjectiveTags[0]="Rescue", ObjectiveTags[1]="Neutralize", ObjectiveTags[2]="ChallengeRescuePeterOsei", ObjectiveTags[3]="Jailbreak_LW")
+
+; Updated CAD Parcels:
+
++arrAllParcelDefinitions=(MapName="md_ChosenArtillery_01_LW", eSize=eParcelSizeType_Medium, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenArtillery", \\
+	ObjectiveTags[0]="ChosenAvengerDefense")
+
++arrAllParcelDefinitions=(MapName="sm_ChosenBulwark_01_LW", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenBulwark")
+	
++arrAllParcelDefinitions=(MapName="sm_ChosenBulwark_02_LW", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenBulwark")
