--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -783,6 +783,14 @@ ShouldCleanupObsoleteUnits=true
 ; tile and immediately catch fire. Replaced by md_ShootingRange_01_LW with the fire removed.
 +ParcelsToRemove="md_ShootingRange_01"
 
+; Replaced with LW one that has fixed hacking doors
++ParcelsToRemove="lg_AdventCathedral"
+
+; Force swapping the CAD parcels to hopefully prevent them spawning with no X4 plant locations.
++ParcelsToRemove="md_ChosenArtillery_01"
++ParcelsToRemove="sm_ChosenBulwark_01"
++ParcelsToRemove="sm_ChosenBulwark_02"
+
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
 
