Remove Extract from one of the new maps
It doesn't have any valid objective parcels

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -25,7 +25,7 @@
 	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
 
 +arrPlots=(MapName="plot_CTY_SmObj_CornerCanal_EMM_01", strType="CityCenter", FloorCount=4, \\
-	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle")
 
 +arrPlots=(MapName="plot_CTY_MdObj_Plazas_EMM_01", strType="CityCenter", \\
 	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="SabotageCC")
