Fix extract on plot that was just disabled

--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -171,7 +171,7 @@
 
 +arrAllParcelDefinitions=(MapName="sm_AdventJail", eSize=eParcelSizeType_Small, \\
 	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="AdventSecurity", eFacing=EParcelFacingType_N, \\
-	ObjectiveTags[0]="Rescue", ObjectiveTags[1]="Neutralize", ObjectiveTags[2]="Jailbreak_LW", bAllowNonObjectiveOverride=true)
+	ObjectiveTags[0]="Rescue", ObjectiveTags[1]="Neutralize", ObjectiveTags[2]="Jailbreak_LW", ObjectiveTags[3]="Extract", bAllowNonObjectiveOverride=true)
 
 +arrAllParcelDefinitions=(MapName="sm_CCLanding_01", eSize=eParcelSizeType_Small, \\
 	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", arrZoneTypes[2]="AdventSecurity")
@@ -264,6 +264,6 @@
 
 +arrAllParcelDefinitions=(MapName="sm_ChosenBulwark_01_LW", eSize=eParcelSizeType_Small, \\
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenBulwark")
-	
+
 +arrAllParcelDefinitions=(MapName="sm_ChosenBulwark_02_LW", eSize=eParcelSizeType_Small, \\
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenBulwark")
