--- a/LongWarOfTheChosen/Config/XComMissions.ini
+++ b/LongWarOfTheChosen/Config/XComMissions.ini
@@ -68,16 +68,22 @@
 [HackWorkstation]
 ; Prevent aliens from hunting XCOM after objective has been hacked because it's
 ; cheesy having the aliens know exactly where you are.
+EngageTimerAtMissionStart=true
+EngageTimerWhenConcealmentLost=false
 HardDisablePostObjectiveHunting=true
 
 [RecoverItem]
 ; Prevent aliens from hunting XCOM after objective has been recovered because it's
 ; cheesy having the aliens know exactly where you are.
+EngageTimerAtMissionStart=true
+EngageTimerWhenConcealmentLost=false
 HardDisablePostObjectiveHunting=true
 
 [DestroyObject]
 ; Prevent aliens from hunting XCOM after objective has been destroyed because it's
 ; cheesy having the aliens know exactly where you are.
+EngageTimerAtMissionStart=true
+EngageTimerWhenConcealmentLost=false
 HardDisablePostObjectiveHunting=true
 
 [DestroyTransmitter]
