some crate race map fixes
swap maps to a new custom PCP that fixes some collision issues

Also some adjustment to defend retal type evac spawning, to try to make it not spawn in the complete map corner as much.

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -423,3 +423,7 @@
 
 +arrAllPCPDefs=(MapName="TWN_Lot_08x08_01", arrPlotTypes[0]="SmallTown", \\
 	strPCPType="Lot", strTurnType="Straight", iWidth=8, iLength=8) 
+
++arrAllPCPDefs=(MapName="WLD_Train_SupplyExtract_08x08_01", \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	strPCPType="DirtRoad", strTurnType="SupplyExtractTrain", iWidth=8, iLength=8)
