Fix a slums PCP that spawns you under a hack tower
Also adds a system to allow removing PCP definitions.

Base game PCP is disabled, replacement is added.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -95,7 +95,8 @@ bEnableCityHQs = true
 +MapsToDisable=Plot_CTY_MdObj_Canal_Voz_1C
 
 ; This one can spawn you under the detection lampposts
-+MapsToDisable=Plot_SLM_MdObj_Wash_Voz_1C
+; No longer needed with PCP disabling?
+;+MapsToDisable=Plot_SLM_MdObj_Wash_Voz_1C
 
 ; Spawns with broken evac zones per github issue #1262
 +MapsToDisable=Plot_ABN_GOps_Skyranger
@@ -790,6 +791,12 @@ ShouldCleanupObsoleteUnits=true
 +ParcelsToRemove="md_ChosenArtillery_01"
 +ParcelsToRemove="sm_ChosenBulwark_01"
 +ParcelsToRemove="sm_ChosenBulwark_02"
+
+
+; PCPs to remove here:
+
+; This one spawns you under a network tower
++PCPsToRemove="SLM_Blvd_T_16x16_01"
 
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
