--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -427,3 +427,7 @@
 +arrAllPCPDefs=(MapName="WLD_Train_SupplyExtract_08x08_01", \\
 	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
 	strPCPType="DirtRoad", strTurnType="SupplyExtractTrain", iWidth=8, iLength=8)
+
+; Fix a busted base game one that spawns you under network towers
++arrAllPCPDefs=(MapName="SLM_Blvd_T_16x16_01_LW", arrPlotTypes[0]="Slums", \\
+	strPCPType="Boulevard", strTurnType="T", iWidth=16, iLength=16)
