New AI modification hook
Adds a new config array to allow priority-based AI overrides with mod-installed checks.
Requested by Reshi.

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -184,6 +184,10 @@
 +NewBehaviors=(BehaviorName=EvaluatePotentialMeleeTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=IsVisibleToPlayer, Child[2]=TargetScoreClosestIfInRange, Child[3]=AvoidBoundAndPanickedTargets, Child[4]=TargetScoreCivilian, Child[5]=SSCustomMeleeTargetScore, Child[6]=UpdateBestTarget)
 +NewBehaviors=(BehaviorName=ScoreClosestEnemyIfInRange, NodeType=Sequence, Child[0]=TargetIsEnemy, Child[1]=IsVisibleToPlayer, Child[2]=TargetIsNotFacelessCivilian, Child[3]=IsTargetInMovementRange-StandardMelee, Child[4]=TargetScoreByScaledDistance-1, Child[5]=AddToTargetScore_100, Child[6]=AvoidBoundAndPanickedTargets)
 
+;;; Mod compatibility: config priority for behavior overrides.  Higher priority wins if 2 entries have the same behavior name.
+
+;+OverrideBehaviors=((BehaviorName = BehaviorTreeName, NodeType = Selector, Child[0]=Move1, Child[1]=Move2), Priority=90, ModName = ModPackageName)
+
 ; ----------------------------------------------------------------------------------------------------------
 ; --------------------------- ADVENT SHIELDBEARER --------------------------------------------------
 ; ---------------------------------------------------------------------------------------------------------- 
