Buff Capacitor Discharge range
It isn't actually to vision range before, so now it's 1m beyond.  It's still the same AOE

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2260,6 +2260,8 @@ SquadInfo_DelayedInit=0.75f					; in seconds
 ; Combat Protocol Cooldown
 COMBAT_PROTOCOL_COOLDOWN = 3
 
+CapacitorDischarge_Range = 28
+
 ; Crit reduction for plated vests (aka Tactical Vests)
 
 PLATED_CRITDEF_BONUS=25
