remove extract from the bridge/pier maps
not great with revealed start missions

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -370,10 +370,10 @@
 
 ; Also cool, but narrow, Pier + Bridge:
  +arrPlots=(MapName="plot_CTY_MdObj_Pier_EMM_01", strType="CityCenter", FloorCount=3, \\
-	ObjectiveTags[0]="CityCenter",  ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="Extract")
+	ObjectiveTags[0]="CityCenter",  ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle")
 
  +arrPlots=(MapName="plot_CTY_MdObj_Bridge_EMM_01", strType="CityCenter", FloorCount=3, \\
-	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Extract", ObjectiveTags[2]="SabotageCC")
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="SabotageCC")
 
 ; "harder" UFO avenger defense maps with forced LOS blocking for the disruptor
 +arrPlots=(MapName="plot_WLD_AvDef_Suffer_EMM_01", strType="Wilderness", \\
