Turn-on the LOS variant of multi shot patching again
the UnitValue based one causes issues with spark sacrifice type abilities

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2310,7 +2310,7 @@ CHOSEN_REGENERATION_HEAL_VALUE_PCT=0.16f
 ; issues with them on maps with large numbers of enemies. Downside is
 ; that follow up shots may not fire if previous shots destroy cover that
 ; breaks line of sight on the target.
-; USE_LOS_FOR_MULTI_SHOT_ABILITIES=true
+USE_LOS_FOR_MULTI_SHOT_ABILITIES=true
 
 ; A list of multi-shot abilities that should be patched to fix a
 ; performance issue
