--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -643,7 +643,7 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=SetPriorityTargetStack-StandardMelee, NodeType=LWAction)
 
 ;Check for sniper fire, if the check passes, then continue forward with the scoring and action selector
-+Behaviors=(BehaviorName=SniperDefense, NodeType=Sequence, Child[0]=SetAlertDataStack, child[1]=SD_SelectBestAlert, Child[2]=HasValidAlertDataLocation, Child[3]=SD_AbilitySelector)
++Behaviors=(BehaviorName=SniperDefense, NodeType=Sequence, Child[0]=NoVisibleEnemies, Child[1]=SetAlertDataStack, child[2]=SD_SelectBestAlert, Child[3]=HasValidAlertDataLocation, Child[4]=SD_AbilitySelector)
 +Behaviors=(BehaviorName=SD_SelectBestAlert, NodeType=RepeatUntilFail, Child[0]=SD_EvaluateAlertData)
 +Behaviors=(BehaviorName=SD_EvaluateAlertData, NodeType=Sequence, Child[0]=SetNextAlertData, Child[1]=SD_ScoreAlertData, Child[2]=UpdateBestAlertData)
 
