Better crate generation for crate races
Revises how the crates gets spawned with proper checking of the native tiles.
* Now checks for existing units/objects in the tile provided - no more spawning crates on top of turrets or enemy units and locking them in place.
* If the tile is invalid, it will search for a valid tile, first adjacent tiles, then in an ever expanding box until a valid tile is found. If multiple valid tiles are found in the perimeter square, it randomly chooses one.
* If the native code just chokes and doesn't give a tile, it reverse engineers the approximate starting point and then searches from there.
* Takes into account overhead clearance using the check for whether the tile is valid to evac from, and also checks that units can reach the tile, and also no ramp tiles.
* May not fix boxes that spawn in areas that are accessible, but only via grapple/SPARK type movement.
* Re-enabled the abandoned city elevated train map that was notorious for inaccessible boxes or just missing box spawns, since with testing these changes appear to fix it.

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -4,7 +4,8 @@
 -arrPlots=(MapName="Plot_Multiplayer_Test", strType="MP_Test", ExcludeFromStrategy=true, ExcludeFromRetailBuilds=true,      ObjectiveTags[0]="Multiplayer", FriendlyNameIndex=MPI_Test)
 
 ; Kill the shitty Abandoned City supply extract plot that spawns bugged crates.  If you want to play it, add a ; in front of the below line.
--arrPlots=(MapName="Plot_ABN_SupplyExtract_ElTrain", strType="Abandoned", ObjectiveTags[0]="SupplyExtraction")
+; New system should fix this, so adding it back into rotation
+;-arrPlots=(MapName="Plot_ABN_SupplyExtract_ElTrain", strType="Abandoned", ObjectiveTags[0]="SupplyExtraction")
 
 ; New regular plots
 +arrPlots=(MapName="Plot_CTY_LgObj_Civic_10_LW", strType="CityCenter", ExcludeFromStrategy=false, ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="LargePlot")
