Proper "can pod see xcom" condition
being used for sniper defense code, so if any unit in the pod can see an xcom unit, they will all react to it and not use sniper defense code.

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -596,6 +596,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 
 +CustomNodes=(NodeTypeString="LWAction", ExtendsFromType="Action", ClassName="LW_Overhaul.X2AIBehavior_LW")
 ; +CustomNodes=(NodeTypeString="DLC3Action", ExtendsFromType="Action", ClassName="DLC_3.X2AIBT_DLC_90Actions")
++CustomNodes=(NodeTypeString="LWCondition", ExtendsFromType="Condition", ClassName="LW_Overhaul.X2AIBTDefaultConditions_LW")
+
 
 ; Added new behaviors
 +Behaviors=(BehaviorName=SetBestTargetAsCurrentTarget-StandardShot, NodeType=Action)
@@ -643,9 +645,11 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=SetPriorityTargetStack-StandardMelee, NodeType=LWAction)
 
 ;Check for sniper fire, if the check passes, then continue forward with the scoring and action selector
-+Behaviors=(BehaviorName=SniperDefense, NodeType=Sequence, Child[0]=NoVisibleEnemies, Child[1]=SetAlertDataStack, child[2]=SD_SelectBestAlert, Child[3]=HasValidAlertDataLocation, Child[4]=SD_AbilitySelector)
++Behaviors=(BehaviorName=SniperDefense, NodeType=Sequence, Child[0]=LWNoVisibleEnemiesToTeam, Child[1]=SetAlertDataStack, child[2]=SD_SelectBestAlert, Child[3]=HasValidAlertDataLocation, Child[4]=SD_AbilitySelector)
 +Behaviors=(BehaviorName=SD_SelectBestAlert, NodeType=RepeatUntilFail, Child[0]=SD_EvaluateAlertData)
 +Behaviors=(BehaviorName=SD_EvaluateAlertData, NodeType=Sequence, Child[0]=SetNextAlertData, Child[1]=SD_ScoreAlertData, Child[2]=UpdateBestAlertData)
+
++Behaviors=(BehaviorName=LWNoVisibleEnemiesToTeam, NodeType=LWCondition)
 
 ;only sniper alerts are scored, give them a base score and adjust for distance and age in case there are more than 1
 +Behaviors=(BehaviorName=SD_ScoreAlertData, NodeType=Sequence, Child[0]=ScoreSniperFire, Child[1]=SSScoreInvalidAlertData, Child[2]=SD_ScoreAlertDataAge, Child[3]=SD_ScoreAlertDataDistance)
