Fix beam hunter axe burn chance
typo meant it never was changed from base, so was always 100% burn
now it's 50%

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1109,6 +1109,7 @@ SERIAL_CRIT_MALUS_PER_KILL=20
 SERIAL_AIM_MALUS_PER_KILL=0
 SERIAL_DAMAGE_FALLOFF=TRUE
 FUSION_SWORD_FIRE_CHANCE=10
+BEAM_AXE_FIRE_CHANCE=50
 KILLZONE_CONE_LENGTH=18
 KILLZONE_CONE_WIDTH=12
 
