Add standalone LW alienpack to incompatible mods
yes, you don't need it.

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -150,6 +150,7 @@ RequiredHighlanderVersion = (MajorVersion = 1, MinorVersion = 29, PatchVersion =
 +IncompatibleMods="PrototypeArmoury"
 +IncompatibleMods="WOTC_APA_WeaponItemOverhaul"
 +IncompatibleMods="LootIndicator"
++IncompatibleMods="WOTC_AlienPack"
 +IncompatibleMods="RWRealisticFlightMode"
 
 +RequiredMods="X2WOTCCommunityHighlander"
