Spark Armor rework round 2 electric boogaloo
Sparks can no longer be deployed while wounded.
Sparks lose 4 HP growth

In exchange...

Ablative HP on armor returns!
3/5/7 for standard armor for kevlar/plated/powered tiers
3/5 for the light armor for plated/powered tiers
8/10 for the heavy armor for plated/powered tiers

Heavy armor loses the ammo slot, gains 2/4 hp wound reduction for the plated/powered tiers
plated/powered medium armor gain the ammo slot

Got rid of all the non-english localization for the LW custom armors so that they aren't showing incorrect info, they will need to be re-translated.
light armor gets 1 turn cooldown reduction for Kinetic Strike

This is to reduce the effectiveness of spark-spam where the player sends out a bunch of wounded sparks and then just repairs them all during the mission. the ablative HP provides some measure of wound reduction and the heavy armor now leans further that way with actual HP wound reduction attached. Medium armor becomes the shooty/utility armor with the ammo slot, and Light armor leans more into the melee with additional cooldown reduction.  Light armor + concussive strike means the base Kinetic Strike ability has a 1 turn cooldown.

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -682,8 +682,10 @@ SuperConcealmentStandardShotLoss=100
 +AbilityUnlocksGrenadePocket="TotalCombat"
 +AbilityUnlocksHeavyWeapon="TotalWar"
 
-+AbilityUnlocksAmmoPocket="PlatedSparkHeavyArmorStats_LW"
-+AbilityUnlocksAmmoPocket="PoweredSparkHeavyArmorStats_LW"
+;+AbilityUnlocksAmmoPocket="PlatedSparkHeavyArmorStats_LW"
+;+AbilityUnlocksAmmoPocket="PoweredSparkHeavyArmorStats_LW"
++AbilityUnlocksAmmoPocket=SPARK_Plated_Plating_Ability
++AbilityUnlocksAmmoPocket=SPARK_Powered_Plating_Ability
 
 [XComGame.X2Effect_SmokeGrenade]
 bSmokeCancelsFlankCritBonus=true
