Updated handling for Coup De Grace
1. Change how damage-over-time effects are excluded.
2. Add  hit result and current damage checks.
3. Expose the disorientation modifier to config.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -99,6 +99,8 @@ TARGET_DAMAGE_CHANCE_MULTIPLIER=75
 COUP_DE_GRACE_2_HIT_BONUS=50
 COUP_DE_GRACE_2_CRIT_BONUS=50
 COUP_DE_GRACE_2_DAMAGE_BONUS=2
+; The bonuses are multiplied by this amount for disoriented units
+COUP_DE_GRACE_2_DISORIENTED_MODIFIER = 0.5f
 
 [LW_Overhaul.X2Ability_LW_SpecialistAbilitySet]
 FAILSAFE_PCT_CHANCE=100
