Spark class tree changes/abilities
To go with the armor changes, have a rework of class stuff.

Heavy weapon ability at squaddie is gone now.  You need to take it.  Sorry, they just have too much at squaddie, so it's that, or do something to Overdrive.

Tree redone a bit to get more melee stuff in it.  Also can take the healing buff perk without giving up all damage stuff.
New perk: Blastmaster - grants Salvo + Rainmaker, since heavy weapon slot took Rainmaker's place at SGT.
Extended Reserves now redone into "Prep For War" with additional bonuses a-la True Predator: if Assault Servos is taken, provides an additional +2 damage and -1 cooldown reduction to Strike, if Enhanced Targeting Systems is taken, provides +10 extra aim and the Avenger perk.

Also increases some costs.

Mechanized Warfare now needs the same amount of time as subsequent sparks
Subsequent Sparks now require 1 MEC wreck per spark.

Plated tier Spark armors now cost 1 elerium core extra.

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -2093,13 +2093,13 @@ bHasClassMovie=true
 								(AbilityName="Failsafe", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon), \\
 								(AbilityName="AdvancedLogic_LW"), \\
 								(AbilityName="Intimidate"), \\
-								(AbilityName="ImpactCompensationV2XCOM_LW") \\
+								(AbilityName="Formidable"	) \\
 					))
 
 +RandomAbilityDecks=(DeckName="Rank2_XComAbilities", \\
 					Abilities=( (AbilityName="DamnGoodGround"), \\
 								(AbilityName="SteadyHands", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-								(AbilityName="Cutthroat"), \\
+								(AbilityName="Brawler", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="EverVigilant", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="BringEmOn",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon) \\
 					))
@@ -2121,7 +2121,7 @@ bHasClassMovie=true
 					))
 
 +RandomAbilityDecks=(DeckName="Rank5_XComAbilities", \\
-					Abilities=( (AbilityName="Brawler", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+					Abilities=( (AbilityName="ImpactCompensationV2XCOM_LW"), \\
 								(AbilityName="HardTarget"), \\
 								(AbilityName="Infighter"), \\
 								(AbilityName="Resilience"), \\
@@ -2129,7 +2129,7 @@ bHasClassMovie=true
 					))
 
 +RandomAbilityDecks=(DeckName="Rank6_XComAbilities", \\
-					Abilities=( (AbilityName="BrawlerProtocol_LW"), \\
+					Abilities=( (AbilityName="CoolUnderPressure", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="CombatFitness",  ApplyToWeaponSlot=eInvSlot_Unknown), \\
 								(AbilityName="ShootingSharp_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="PrimaryReturnFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
@@ -2154,64 +2154,63 @@ bHasClassMovie=true
 								(AbilityType=(AbilityName="KineticStrike_LW", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
 								(AbilityType=(AbilityName="Reboot_LW")), \\
 								(AbilityType=(AbilityName="RepairMW_LW", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="Arsenal", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
 								(AbilityType=(AbilityName="RobotImmunities", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
 								(AbilityType=(AbilityName="IntrusionProtocol", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=4), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; LPCL
-+SoldierRanks=(  AbilitySlots=( (AbilityType=(AbilityName="Neutralize_LW", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="Formidable"				)), \\
-								(AbilityType=(AbilityName="Flush",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(  AbilitySlots=( (AbilityType=(AbilityName="Neutralize_LW", 	ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+								(AbilityType=(AbilityName="ZoneOfControl_LW"		)), \\
+								(AbilityType=(AbilityName="Flush",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank1_XComAbilities") \\
 							),	\\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=3), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; CPL
-+SoldierRanks=(  AbilitySlots=( (AbilityType=(AbilityName="EnhancedSystems_LW",					ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="Obliterator_LW"					)), \\
-								(AbilityType=(AbilityName="HoloAACombo_LW",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(  AbilitySlots=( (AbilityType=(AbilityName="EnhancedSystems_LW",	ApplyToWeaponSlot=eInvSlot_Unknown)), \\
+								(AbilityType=(AbilityName="Cutthroat")),	\\
+								(AbilityType=(AbilityName="CenterMass",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank2_XComAbilities") \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=3), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; SGT
-+SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="Rainmaker",				ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="DamageControl"			)),	\\
-								(AbilityType=(AbilityName="CenterMass",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="Arsenal", 			ApplyToWeaponSlot=eInvSlot_Unknown)), \\
+								(AbilityType=(AbilityName="Obliterator_LW"		)), \\
+								(AbilityType=(AbilityName="HoloAACombo_LW",		ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank3_XComAbilities") \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; SSGT
-+SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="ReactionSystems_LW",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="ZoneOfControl_LW"		)), \\
-								(AbilityType=(AbilityName="Shredder",ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)),	\\
++SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="ReactionSystems_LW",		ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+								(AbilityType=(AbilityName="BrawlerProtocol_LW")), \\
+								(AbilityType=(AbilityName="Shredder",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)),	\\
 								(RandomDeckName="Rank4_XComAbilities") \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; TSGT
-+SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="Bombard",					ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)),	\\
-								(AbilityType=(AbilityName="ConcussiveStrike_LW", ApplyToWeaponSlot=eInvSlot_Unknown)), \\
++SoldierRanks=(  AbilitySlots=(	(AbilityType=(AbilityName="Bombard",				ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)),	\\
+								(AbilityType=(AbilityName="ConcussiveStrike_LW", 	ApplyToWeaponSlot=eInvSlot_Unknown)), \\
 								(AbilityType=(AbilityName="TraverseFire",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank5_XComAbilities") \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; GSGT
-+SoldierRanks=( AbilitySlots=(	(AbilityType=(AbilityName="Salvo"				)), \\
-								(AbilityType=(AbilityName="Nova"			)), \\
-								(AbilityType=(AbilityName="Collateral_LW",					ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=( AbilitySlots=(	(AbilityType=(AbilityName="SalvoRainmaker_LW")), \\
+								(AbilityType=(AbilityName="Nova")), \\
+								(AbilityType=(AbilityName="Collateral_LW",	ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank6_XComAbilities") \\
 							), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
 			)
 ; MSGT
-+SoldierRanks=( AbilitySlots=(	(AbilityType=(AbilityName="BonusBombard_LW",				ApplyToWeaponSlot=eInvSlot_Unknown)), \\
-								(AbilityType=(AbilityName="ImpactCompensation_LW"			)), \\
-								(AbilityType=(AbilityName="DisablingShot",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=( AbilitySlots=(	(AbilityType=(AbilityName="BonusBombard_LW",		ApplyToWeaponSlot=eInvSlot_Unknown)), \\
+								(AbilityType=(AbilityName="ImpactCompensation_LW"	)), \\
+								(AbilityType=(AbilityName="DisablingShot",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(RandomDeckName="Rank7_XComAbilities") \\
 							), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5), (StatType=eStat_CombatSims,StatAmount=0)),\\
