--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -717,6 +717,8 @@ FocusedDefenseDodge = 20
 ANATOMY_CRIT = 15
 ANATOMY_ARMOR_PIERCE = 2
 
+PREPFORWAR_MELEE_DMG = 2
+
 [LW_PerkPack_Integrated.X2Effect_HitandRun]
 +HNR_ABILITYNAMES=StandardShot
 +HNR_ABILITYNAMES=StandardShot_NoEnd
