fix some bad Abandoned City PCPs

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -431,3 +431,13 @@
 ; Fix a busted base game one that spawns you under network towers
 +arrAllPCPDefs=(MapName="SLM_Blvd_T_16x16_01_LW", arrPlotTypes[0]="Slums", \\
 	strPCPType="Boulevard", strTurnType="T", iWidth=16, iLength=16)
+
+; Swap some base game ones that have bad corner cover
++arrAllPCPDefs=(MapName="ABN_Blvd_Int_16x16_01_LW", arrPlotTypes[0]="Abandoned", \\
+	strPCPType="Boulevard", strTurnType="Intersection", iWidth=16, iLength=16)
+
++arrAllPCPDefs=(MapName="ABN_Blvd_Str_16x08_02_LW", arrPlotTypes[0]="Abandoned", \\
+	strPCPType="Boulevard", strTurnType="Straight", iWidth=16, iLength=8)
+
++arrAllPCPDefs=(MapName="ABN_Blvd_Str_16x16_04_LW", arrPlotTypes[0]="Abandoned", \\
+	strPCPType="Boulevard", strTurnType="Straight", iWidth=16, iLength=16)
