--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -799,6 +799,11 @@ ShouldCleanupObsoleteUnits=true
 ; This one spawns you under a network tower
 +PCPsToRemove="SLM_Blvd_T_16x16_01"
 
+; These have some bad cover spots
++PCPsToRemove="ABN_Blvd_Int_16x16_01"
++PCPsToRemove="ABN_Blvd_Str_16x08_02"
++PCPsToRemove="ABN_Blvd_Str_16x16_04"
+
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
 
