fix config defined by array being added as +

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1936,37 +1936,37 @@ UNDERINFILTRATION_ARMOR_MODS[3]=0
 ; This amount is adjusted by ALERT_RANDOM_FACTOR. Alerts higher than provided here will
 ; use the highest value given. Reinforcements will trigger when the bucket reaches 1.0,
 ; then the bucket is reduced by 1.
-+ALERT_MODIFIER[0]=0.1
-+ALERT_MODIFIER[1]=0.12
-+ALERT_MODIFIER[2]=0.14
-+ALERT_MODIFIER[3]=0.16
-+ALERT_MODIFIER[4]=0.18
-+ALERT_MODIFIER[5]=0.20
-+ALERT_MODIFIER[6]=0.22
-+ALERT_MODIFIER[7]=0.24
-+ALERT_MODIFIER[8]=0.26
-+ALERT_MODIFIER[9]=0.28
-+ALERT_MODIFIER[10]=0.3
-+ALERT_MODIFIER[11]=0.32
-+ALERT_MODIFIER[12]=0.34
-+ALERT_MODIFIER[13]=0.36
-+ALERT_MODIFIER[14]=0.38
-+ALERT_MODIFIER[15]=0.40
-+ALERT_MODIFIER[16]=0.42
-+ALERT_MODIFIER[17]=0.44
-+ALERT_MODIFIER[18]=0.46
-+ALERT_MODIFIER[19]=0.48
-+ALERT_MODIFIER[20]=0.50
-+ALERT_MODIFIER[21]=0.52
-+ALERT_MODIFIER[22]=0.54
-+ALERT_MODIFIER[23]=0.56
-+ALERT_MODIFIER[24]=0.58
-+ALERT_MODIFIER[25]=0.60
+ALERT_MODIFIER[0]=0.1
+ALERT_MODIFIER[1]=0.12
+ALERT_MODIFIER[2]=0.14
+ALERT_MODIFIER[3]=0.16
+ALERT_MODIFIER[4]=0.18
+ALERT_MODIFIER[5]=0.20
+ALERT_MODIFIER[6]=0.22
+ALERT_MODIFIER[7]=0.24
+ALERT_MODIFIER[8]=0.26
+ALERT_MODIFIER[9]=0.28
+ALERT_MODIFIER[10]=0.3
+ALERT_MODIFIER[11]=0.32
+ALERT_MODIFIER[12]=0.34
+ALERT_MODIFIER[13]=0.36
+ALERT_MODIFIER[14]=0.38
+ALERT_MODIFIER[15]=0.40
+ALERT_MODIFIER[16]=0.42
+ALERT_MODIFIER[17]=0.44
+ALERT_MODIFIER[18]=0.46
+ALERT_MODIFIER[19]=0.48
+ALERT_MODIFIER[20]=0.50
+ALERT_MODIFIER[21]=0.52
+ALERT_MODIFIER[22]=0.54
+ALERT_MODIFIER[23]=0.56
+ALERT_MODIFIER[24]=0.58
+ALERT_MODIFIER[25]=0.60
 
 ; Randomization factor for the alert modifier. The actual value from the ALERT_MODIFIER table
 ; above is modified +/- this value expressed as a percentage. E.g. with the factor set to 0.3,
 ; the regional alert modifier will be randomized by +/- 30% before being added to the bucket each turn.
-+ALERT_RANDOM_FACTOR=0.2
+ALERT_RANDOM_FACTOR=0.2
 
 ; Effective region alert level to use for ambush missions
 AMBUSH_MISSION_REGION_ALERT_LEVEL=2
