Swap covering fire effect to use reactionfire and ignores cover checks
instead of using config list

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1175,17 +1175,7 @@ BONUS_BM_SHRED = 3
 LOW_COVER_AIM_MOD=20
 HIGH_COVER_AIM_MOD=30
 
-+AllowedAbilities=OverwatchShot
-+AllowedAbilities=LongWatchShot
-+AllowedAbilities=GunslingerShot
-+AllowedAbilities=KillZoneShot
-+AllowedAbilities=PistolOverwatchShot
-+AllowedAbilities=SuppressionShot_LW
-+AllowedAbilities=SuppressionShot
-+AllowedAbilities=AreaSuppressionShot_LW
-+AllowedAbilities=CloseCombatSpecialistAttack
-;+AllowedAbilities=PrimaryReturnFireShot
-+AllowedAbilities=PistolReturnFireShot
+; Config array gone, now checks for reaction fire instead
 
 [LW_Overhaul.X2Effect_PassiveShredder_LW]
 +ShredderPerWeaponTech=(WeaponTech = "coilgun_lw", Shred = 2)
