Add config for no-scatter rockets if people want.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -133,6 +133,7 @@ bEnableCityHQs = true
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket_Spark
 
+; +ROCKET_ABILITIES_TO_UPDATE_NOSCATTER = NoScatterAbilityHere
 
 ; This will OPTC the stage 1 waterworld to LW's udpated one and patch the current mission to it. Will also need the console command to clear cache.
 ; Disable this if you are using another mod that swaps golden path kismet.
