clone some of the new maps to use different spawns for psi transmitter
they spawned you way too far out, so splitting them.

This is already live with the hotfixes today

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -288,7 +288,10 @@
 	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
 
 +arrPlots=(MapName="plot_SLM_MdObj_Fork_EMM_01", strType="Slums", \\
-	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
++arrPlots=(MapName="plot_SLM_MdObj_Fork_EMM_01_PsiTrans", strType="Slums", \\
+	ObjectiveTags[0]="DestroyTransmitter")
 
 +arrPlots=(MapName="plot_SLM_LgObj_Dense_EMM_01", strType="Slums", \\
 	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
@@ -354,7 +357,11 @@
 ; good
 +arrPlots=(MapName="plot_TWN_MdObj_Fork_EMM_01", strType="SmallTown", \\
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
-	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
++arrPlots=(MapName="plot_TWN_MdObj_Fork_EMM_01_PsiTrans", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="DestroyTransmitter")
 
 ; EMM SUFFER plots:
 
