set the CHL bDisableAimAssist flag
should hopefully fix people seeing 0% to hits with Extended Information assuming it does the proper code path.

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -41,6 +41,8 @@ LostTowersPOIForceLevel=5
 PreserveProxyUnitData=true
 UseTeamSwapFix=true
 ;bDontUnequipCovertOps=true
+
+bDisableAimAssist = true
 UseNewPersonnelStatusBehavior=true
 PlaceEvacZoneAbilityName="PlaceDelayedEvacZone"
 DisableExtraLOSCheckForSmoke=true
@@ -83,14 +85,14 @@ DisableSkipGroupOnScamper=true
 
 +ClassesAllowPsiPCS=PsiOperative
 
+bDisableCivilianPreMoveYell = true
+bDisableYellRedAlert = true
+
 +GrenadesRequiringUnitsOnTargetedTiles=SmokeGrenade
 +GrenadesRequiringUnitsOnTargetedTiles=SmokeGrenadeMk2
 ;POTENTIALLY DEPRECATED
 +GrenadesRequiringUnitsOnTargetedTiles=DenseSmokeGrenade
 +GrenadesRequiringUnitsOnTargetedTiles=DenseSmokeGrenadeMk2
-
-bDisableCivilianPreMoveYell = true
-bDisableYellRedAlert = true
 
 [BetterSecondWaveSupport.X2DownloadableContentInfo_BetterSecondWaveSupport]
 +AddSecondWave=(ID="DisableTutorial", DifficultyValue=0)
