Swap Abandoned PCP that spawns crates in building
set roof area to generate tiles

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -794,6 +794,9 @@ ShouldCleanupObsoleteUnits=true
 +ParcelsToRemove="sm_ChosenBulwark_01"
 +ParcelsToRemove="sm_ChosenBulwark_02"
 
+; spawns crates indoors:
++ParcelsToRemove="sm_Megablock_Middle_Diner"
+
 
 ; PCPs to remove here:
 
