--- a/LongWarOfTheChosen/Config/XComMaps.ini
+++ b/LongWarOfTheChosen/Config/XComMaps.ini
@@ -106,3 +106,5 @@
 +arrMapImageDefs=(MapName="md_InterrogationCompound_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_MD_InterrogationCompound_02_Temp", Biome="Temperate")
 +arrMapImageDefs=(MapName="md_InterrogationCompound_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_MD_InterrogationCompound_02_Tundra", Biome="Tundra")
 +arrMapImageDefs=(MapName="md_InterrogationCompound_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_MD_InterrogationCompound_02_Xenoform", Biome="Xenoform")
+
++arrMapImageDefs=(MapName="sm_Megablock_Middle_Diner_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_ABD_SM_Megablock_Middle_Diner", Biome="")
