--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -267,3 +267,12 @@
 
 +arrAllParcelDefinitions=(MapName="sm_ChosenBulwark_02_LW", eSize=eParcelSizeType_Small, \\
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="ChosenBulwark")
+
+; Fixed crate race abandoned parcel
+
++arrAllParcelDefinitions=(MapName="sm_Megablock_Middle_Diner_LW", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="Abandoned"), eFacing=EParcelFacingType_N, \\
+	arrZoneTypes[0]="Middle", arrZoneTypes[1]="Middle_NoAlley", arrZoneTypes[2]="Diner", \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", ObjectiveTags[5]="NeutralizeCommander", \\
+	ObjectiveTags[6]="SupplyExtraction", bAllowNonObjectiveOverride=true)
