remove Extract from the trench map
it's bad, but fine for the other mission types.

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -404,7 +404,7 @@
 
 ; 
 +arrPlots=(MapName="plot_CTY_MdObj_Trench_EMM_01", strType="CityCenter", FloorCount=4, \\
-	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Extract", ObjectiveTags[2]="SabotageCC")
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="SabotageCC")
 
 +arrPlots=(MapName="Plot_WLD_LgObj_Wetlands_EMM_01", strType="Wilderness", \\
 	ValidBiomes[0]="Temperate", \\
