Updating handling for smoke grenade effects
1. Add world effects that would handle application of the effects for the units entering smoke.
2. Integrate Combat Drugs and Regenerative Mist from Extended Perk Pack.
3. Improve handling for Dense Smoke.
4. Add localization tags for Dense Smoke.
5. Move Dense Smoke and Sting Grenades OPTC changes to `X2Ability_PerkPackAbilitySet2::AddEffectsToGrenades()`.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -362,8 +362,10 @@ COLLATERAL_RADIUS = 176
 COLLATERAL_ENVDMG = 30 
 
 
-;New dense smoke
-DENSESMOKEGRENADE_HITMOD = 10
+; DEPRECATED
+; DENSESMOKEGRENADE_HITMOD = 10
+
+; Now also used for Combat Stimulants and Regenerative Mist
 +SMOKE_GRENADES_FOR_DENSE_SMOKE="SmokeGrenade"
 +SMOKE_GRENADES_FOR_DENSE_SMOKE="SmokeGrenadeMk2"
 
@@ -415,6 +417,18 @@ SHOCKWAVE_TURNS = 1
 +ATTACK_GRENADES=FlashbangGrenade
 
 ChainingJolt_Cooldown=3
+
+[LW_PerkPack_Integrated.X2Effect_LWCombatStims]
+AimBonus = 10
+CritBonus = 10
+
+[LW_PerkPack_Integrated.X2Effect_LWDenseSmoke]
+DefenseBonus = 10
+
+[LW_PerkPack_Integrated.X2Effect_LWRegenSmoke]
+HealAmount = 2
+MaxHealAmount = 4
+bApplyToBleedingOutUnits = false
 
 [LW_PerkPack_Integrated.X2AbilityCharges_Repair_LW]
 ; Repair
