fix sign on updated dense smoke effect
it was buffing aim against targets in the smoke

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -423,6 +423,7 @@ AimBonus = 10
 CritBonus = 10
 
 [LW_PerkPack_Integrated.X2Effect_LWDenseSmoke]
+; This is converted to negative in the effect; positive values increase the buff
 DefenseBonus = 10
 
 [LW_PerkPack_Integrated.X2Effect_LWRegenSmoke]
