More plots and parcels for Compounds
4 plots, 8 parcels.
All tweaked/modified versions of the base game ones, redone layouts for variety.

--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -157,6 +157,26 @@
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound", arrZoneTypes[1]="AdventCompoundHQ", eFacing=EParcelFacingType_S, \\
 	ObjectiveTags[0]="RescueCompound", bAllowNonObjectiveOverride=true)
 
+; Additional compound ones for variety:
+
++arrAllParcelDefinitions=(MapName="sm_AdventLandingPad_03_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_E, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventTransportAir")
++arrAllParcelDefinitions=(MapName="sm_AdventLandingPad_04_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_E, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventTransportAir")
++arrAllParcelDefinitions=(MapName="sm_AdventMotorPool_03_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_E, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventTransportGround", arrZoneTypes[1]="MotorPool01")
++arrAllParcelDefinitions=(MapName="sm_AdventMotorPool_04_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_E, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventTransportGround")
+
++arrAllParcelDefinitions=(MapName="sm_AdventHoldingPen_02_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_N, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound", arrZoneTypes[1]="HoldingPen")
++arrAllParcelDefinitions=(MapName="sm_AdventPowerStation_02_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_N, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound")
++arrAllParcelDefinitions=(MapName="sm_AdventWarehouse_03_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_W, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound")
++arrAllParcelDefinitions=(MapName="sm_AdventWarehouse_04_LW", eSize=eParcelSizeType_Small, eFacing=EParcelFacingType_W, \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound")
+
 ; EMM parcels for UFOs
 
 +arrAllParcelDefinitions=(MapName="lg_UFO_Transport", eSize=eParcelSizeType_Large,  \\
