--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -276,6 +276,27 @@
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
 	ObjectiveTags[0]="SupplyRaidConvoy")
 
+
+; New Compound plots:
+
+; The base game ones don't have numbers in the name, but I'm starting at 2 anyways
+
++arrPlots=(MapName="Plot_WLD_Compound_ATT_Ravine_02_LW", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Compound", FloorCount=4)
+
++arrPlots=(MapName="Plot_WLD_Compound_ATT_Stream_02_LW", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Compound")
+
++arrPlots=(MapName="Plot_WLD_Compound_Road_Ravine_02_LW", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Compound")
+
++arrPlots=(MapName="Plot_WLD_Compound_Road_Stream_02_LW", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Compound")
+
 ; more EMM plots:
 
 ;;SLUMS;;
