more map tweaks
slightly large map for the WarehouseParking one
Redid the big trench/highway crossing map with ladders for more spots to move up

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -353,7 +353,8 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 +SlightlyLargeMaps=Plot_TUN_Sewer_Guerilla_03_LW
 +SlightlyLargeMaps=Plot_TWN_GOps_Waterfront_01
 +SlightlyLargeMaps=Plot_TWN_GOps_Waterfront_02
-+SlightlyLargeMaps==plot_TWN_MdObj_Suburb_EMM_01
++SlightlyLargeMaps=plot_TWN_MdObj_Suburb_EMM_01
++SlightlyLargeMaps=plot_TWN_LgObj_WarehouseParking_EMM_01
 
 ; +LargeMaps=MapName
 +LargeMaps=Plot_CTY_Council_MdObj_Plaza
@@ -362,6 +363,7 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 
 +VeryLargeMaps=plot_CTY_MdObj_Pier_EMM_01
 +VeryLargeMaps=plot_CTY_MdObj_Bridge_EMM_01
++VeryLargeMaps=plot_CTY_MdObj_Trench_EMM_01
 
 +ActivityRewardScalars=(ActivityName=Propaganda, RewardScalar=1.15)
 
@@ -796,6 +798,9 @@ ShouldCleanupObsoleteUnits=true
 
 ; spawns crates indoors:
 +ParcelsToRemove="sm_Megablock_Middle_Diner"
+
+; missing objectives -> unwinnable missions
++ParcelsToRemove="md_HWY_Mgee_adventroadblock02"
 
 
 ; PCPs to remove here:
